Overflow options for the rhyming diagram area are no longer needed - and may be causing issues in certain browsers.

--- a/app/assets/stylesheets/rhyming_diagram.css
+++ b/app/assets/stylesheets/rhyming_diagram.css
@@ -9,8 +9,6 @@
 	height:               240px;
 	width:                1000px;
 	padding:              10px 30px 10px;
-	overflow-x:           scroll;
-  overflow-y:           hidden;
 	white-space:          nowrap;
 }
 
